--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "videjs-react",
+  "name": "@j4viermora/videjs-react",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "source": "src/index.tsx",
+  "main": "dist/index.js",
   "type": "module",
-  "main": "./dist/videjs-react.umd.js",
+  "types": "dist/types.d.ts",
   "module": "./dist/videjs-react.es.js",
   "exports": {
     ".": {
@@ -13,15 +15,18 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "watch": "parcel watch",
+    "build": "parcel build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@parcel/packager-ts": "2.9.3",
+    "@parcel/transformer-typescript-types": "2.9.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -30,7 +35,25 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "parcel": "^2.9.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0"
+  },
+  "engines": {
+    "node": ">= 16"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/j4viermora/videjs-react"
+  },
+  "bugs": {
+    "url": "https://github.com/j4viermora/videjs-react/issues"
+  },
+  "homepage": "https://github.com/j4viermora/videjs-react/issues#readme",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
